:new: :sparkles: added routing to the app

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,10 @@
   text-decoration-color: rgb(117, 25, 25);
   
 }
+.navlink{
+  float: right;
+}
+
 .header h4{
   color:#61dafbaa;
   margin-left: 2em;
