--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,24 @@
 }
 .navlink{
   float: right;
+  
+}
+.item{
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  margin: 20px;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color:rgba(97, 218, 251, 0.667);
+  cursor: pointer;
+  transition: border-color 0.25s;
+
 }
 
 .header h4{
-  color:#61dafbaa;
+  color:rgba(97, 218, 251, 0.667);
   margin-left: 2em;
   text-align: left;
 }
