--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,19 @@
   /* text-align: center; */
 }
 .header{
-  position: absolute;
-  Color:rgb(8, 73, 148);
+  display: block;
+  position: fixed;
+  Color:rgb(255, 255, 255);
   width: 100%;
   height: 25%;
-  background-color: #0f0f14aa;
-  text-decoration-color: rgb(117, 25, 25);
+  background-color: #5e0472;
+
+ 
+  
+}
+.list{
+  padding-top: 160px;
+  display: inline-block;
   
 }
 .navlink{
