--- a/src/App.css
+++ b/src/App.css
@@ -81,3 +81,13 @@
 .read-the-docs {
   color: #888;
 }
+
+.count{
+  border-radius: 10px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color:rgba(97, 218, 251, 0.667);
+}
